<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity"
    android:background="@drawable/background_main_activity">

    <LinearLayout
        android:id="@+id/layout_search"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_30sdp"
        android:orientation="horizontal"
        android:weightSum="11"
        android:gravity="center_vertical"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/image_music"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="@dimen/_30sdp"
            android:src="@drawable/ic_music"
            app:tint="@color/white" />

        <EditText
            android:id="@+id/auto_edit_text_search"
            android:layout_weight="9"
            android:layout_width="0dp"
            android:layout_height="@dimen/_30sdp"
            android:hint="@string/input_name_song_album_singer"
            android:fontFamily="@font/ubuntu_regular"
            android:textSize="@dimen/_13ssp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:maxLines="1"
            android:includeFontPadding="false"
            android:focusable="false"
            android:imeOptions="actionDone"
            android:background="@drawable/background_search"
            android:padding="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_5sdp"/>

        <ImageView
            android:id="@+id/image_search"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="@dimen/_24sdp"
            android:src="@drawable/ic_search"
            app:tint="@color/white"/>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_12sdp"
        android:fillViewport="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_search"
        app:layout_constraintBottom_toTopOf="@id/layout_control_song">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/view_paper_advertisements"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_175sdp"
                android:visibility="gone"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/text_rank"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:text="@string/rank"
                android:fontFamily="@font/ubuntu_bold"
                android:textSize="@dimen/_18ssp"
                android:gravity="center_vertical"
                android:textColor="@color/yellow"
                android:layout_marginTop="@dimen/_13sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                app:layout_constraintTop_toBottomOf="@id/view_paper_advertisements"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_rank"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                app:layout_constraintTop_toBottomOf="@id/text_rank"/>

            <TextView
                android:id="@+id/text_playlists"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:text="@string/playlists"
                android:fontFamily="@font/ubuntu_bold"
                android:textSize="@dimen/_18ssp"
                android:gravity="center_vertical"
                android:textColor="@color/white"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                app:layout_constraintTop_toBottomOf="@id/recycler_view_rank"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_playlists"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                app:layout_constraintTop_toBottomOf="@id/text_playlists"/>

            <TextView
                android:id="@+id/text_singers"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:text="@string/singers"
                android:fontFamily="@font/ubuntu_bold"
                android:textSize="@dimen/_18ssp"
                android:gravity="center_vertical"
                android:textColor="@color/white"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                app:layout_constraintTop_toBottomOf="@id/recycler_view_playlists"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_singers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                app:layout_constraintTop_toBottomOf="@id/text_singers"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <RelativeLayout
        android:id="@+id/layout_control_song"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:visibility="gone"
        android:gravity="center_vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/gray_purple">

        <ImageView
            android:id="@+id/image_song"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="@dimen/_5sdp" />

        <ImageView
            android:id="@+id/image_clear"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_40sdp"
            android:src="@drawable/ic_clear"
            android:layout_marginEnd="@dimen/_5sdp"
            android:layout_alignParentEnd="true"
            app:tint="@color/white"/>

        <ImageView
            android:id="@+id/image_play_or_pause"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_40sdp"
            android:src="@drawable/ic_play"
            android:layout_toLeftOf="@id/image_clear"
            android:layout_marginEnd="@dimen/_5sdp"
            app:tint="@color/white"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="@dimen/_40sdp"
            android:orientation="vertical"
            android:weightSum="2"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:layout_toRightOf="@id/image_song"
            android:layout_toLeftOf="@id/image_play_or_pause">

            <TextView
                android:id="@+id/text_name_song"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:textColor="@color/white"
                android:textSize="@dimen/_16ssp"
                android:fontFamily="@font/ubuntu_medium"
                android:maxLines="1"
                android:gravity="center_vertical"/>

            <TextView
                android:id="@+id/text_name_singer"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:textColor="@color/white"
                android:textSize="@dimen/_12ssp"
                android:fontFamily="@font/ubuntu_regular"
                android:maxLines="1"
                android:gravity="center_vertical"/>

        </LinearLayout>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>